@@ -8,9 +8,13 @@
 		</ul>
 		<form id="ValidatorTestPage" method="post" runat="server">
 			<asp:TextBox ID="textbox" runat="server" />
-			<asp:RequiredFieldValidator ControlToValidate="textbox" EnableClientScript="False" Text="*" Display="Dynamic" ErrorMessage="Text box must not be empty" runat="server" id="RequiredFieldValidator1" />
+			<asp:RequiredFieldValidator ControlToValidate="textbox" EnableClientScript="False" Text="*" Display="Dynamic" ErrorMessage="First message" runat="server" />
+			<asp:RequiredFieldValidator ControlToValidate="textbox" EnableClientScript="False" Text="*" Display="Dynamic" ErrorMessage="Second message" runat="server" />
+			<asp:RequiredFieldValidator ControlToValidate="textbox" EnableClientScript="False" Text="*" Display="Dynamic" ErrorMessage="Third message" runat="server" />
 			<br />
-			<asp:ValidationSummary id="validator" ShowSummary="True" ShowMessageBox="False" EnableClientScript="False" runat="server" />
+			<asp:ValidationSummary id="bulletedSummary" ShowSummary="True" ShowMessageBox="False" DisplayMode="BulletList" EnableClientScript="False" runat="server" />
+			<asp:ValidationSummary id="listSummary" ShowSummary="True" ShowMessageBox="False" DisplayMode="List" EnableClientScript="False" runat="server" />
+			<br />
 			<asp:Button id="submit" text="Submit" runat="server" />
 		</form>
 	</body>
