@@ -37,7 +37,8 @@ namespace NUnitAspTestPages.AspTester
 	{
 		protected System.Web.UI.WebControls.TextBox textbox;
 		protected System.Web.UI.WebControls.RequiredFieldValidator RequiredFieldValidator1;
-		protected System.Web.UI.WebControls.ValidationSummary validator;
+		protected System.Web.UI.WebControls.ValidationSummary bulletedSummary;
+		protected System.Web.UI.WebControls.ValidationSummary listSummary;
 		protected System.Web.UI.WebControls.Button submit;
 	
 		private void Page_Load(object sender, System.EventArgs e)
