@@ -30,6 +30,7 @@ Produced by Jim Shore and Levi Khatskevitch.
 * Removed all XHTML and DTD requirements. Credit to Chris Lovett, Simon Jackson and Levi Khatskevitch.
 * Added run-time exception to correct mis-use of DataGridTester as a container.  Credit to Jim Shore.
 * Finished tutorial.  Credit to Jim Shore.
+* Added support for List display mode in ValidationSummaryTester.  Credit to Leonardo Susatyo.
 
 (Note: Jim Shore was known as Jim Little before the release of version 1.4.)
 
